# margo

./: .gitignore  .travis.yml  CHANGELOG.md  Makefile  Pipfile  README.md  README.rst  _readme.md  db_reader.py  index.html  mkdocs.yml  pyproject.toml  requirements.txt  search.html  setup.py
.github/workflows/: ci.yml
astir_marker_generator/: __init__.py
astir_marker_generator/marker_database/: CellMarker-review.csv
astir_marker_generator/marker_generator/: __init__.py
docs/: Makefile  conf.py  genindex.html  index.html  index.rst  objects.inv
docs/_sources/: index.rst.txt
docs/docsrc/: Makefile
docs/docsrc/source/: conf.py
docs/doctrees/: environment.pickle  index.doctree
docs/pages/doctrees/: environment.pickle  index.doctree
docs/pages/html/: .buildinfo  genindex.html  index.html  objects.inv  (+3 more)
docs/source/: conf.py  index.rst
docs1/: Makefile
docsrc/: Makefile  conf.py
docsrc/source/: conf.py
margo/: __init__.py  data_reader.py  database.py  margo.py  marker_generator.py  rds_reader.R  requests.py  test.py
margo/marker_database/: alias.yml  alias_manual.yml  cellmarker_db.csv  panglao_db.csv  temp.tsv
margo/tests/: test_bin.py  test_margo.py
marker_database/: CellMarker-company.csv  CellMarker-scs.csv  alias.yml
marker_yaml/: celltype_marker.yml
mentor/: __init__.py  db_reader.py
mentor/marker_database/: CellMarker-experiment.csv
mentor/tests/: test_bin.py  test_mentor.py
scripts/: format.sh  lint.sh  test.sh
settings/: __init__.py  paths.py  urls.py
tests/: test_bin.py  test_margo.py
tests/test-data/: test_rds.csv
(+19 files in other folders)
