[tool.poetry]
name = "margo"
version = "0.0.4"
description = "TMargo is a tool that generates yaml cell type marker which maps cell types to gene expression from csv gene expression files."
authors = ["Jinyu Hou <https://github.com/jinyu-hou>"]
license = "GPLv2"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.6.1"

[tool.poetry.dev-dependencies]
mypy = "^0.782"
black = "^19.10b0"
pre-commit = "^2.4.0"
pytest = "^6.0.1"
pytest-cov = "^2.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
